--- a/CONTACTS.yaml
+++ b/CONTACTS.yaml
@@ -100,6 +100,8 @@ egc-second:
     login: JooHyukKim
   - project: infinispan
     login: karesti
+  - projet: quarkus
+    login: Sanne
 
 #--------------------------------------------------------------------------
 # Advisory Board members (sponsor-appointed)
