WildFly bootstrapping agreement, 2025-03-17
Signed-off-by: Brian Stansberry <brian.stansberry@redhat.com>

--- a/CONTACTS.yaml
+++ b/CONTACTS.yaml
@@ -82,6 +82,8 @@ egc:
     login: tristantarrant
   - project: kroxylicious
     login: k-wall
+  - project: wildfly
+    login: bstansberry
 
 #--------------------------------------------------------------------------
 # EGC Backup/Secondary representative (appointed by project governance process)
