👷🤖 add sponsors config

--- a/.github/cf-haus-organization.yml
+++ b/.github/cf-haus-organization.yml
@@ -1,3 +1,10 @@
+sponsors:
+  sponsorable: commonhaus
+  targetRepository: commonhaus/sponsors
+  ignoreUsers:
+    - commonhaus-bot
+  dryRun: true
+
 teamMembership:
   - dryRun: false
     source:
