RESTEasy bootstrap agreement, 2025-04-07
Signed-off-by: James R. Perkins <jperkins@redhat.com>

--- a/CONTACTS.yaml
+++ b/CONTACTS.yaml
@@ -82,6 +82,8 @@ egc:
     login: tristantarrant
   - project: kroxylicious
     login: k-wall
+  - project: resteasy
+    login: jamezp
 
 #--------------------------------------------------------------------------
 # EGC Backup/Secondary representative (appointed by project governance process)
