Add Tom Jenkinson as the EGC secondary for WildFly

--- a/CONTACTS.yaml
+++ b/CONTACTS.yaml
@@ -112,6 +112,8 @@ egc-second:
     login: yrodiere
   - project: kroxylicious
     login: SamBarker
+  - project: wildfly
+    login: tomjenkinson
 
 #--------------------------------------------------------------------------
 # Advisory Board members (sponsor-appointed)
