--- a/CONTACTS.yaml
+++ b/CONTACTS.yaml
@@ -73,7 +73,7 @@ egc:
     login: velo
     bio: Java geek and open-source enthusiast, leading projects here and there. Feign lead, QueryDSL stalwart, and Commonhaus advocate.
   - project: quarkus
-    login: gsmet
+    login: dandreadis
   - project: slatedb
     login: criccomini
   - project: debezium
