👥 Change representatives for Quarkus (#267)
* 👥 Change representatives for Quarkus

* Update CONTACTS.yaml

Leave me in for now.

---------

Co-authored-by: Dimitris Andreadis <dimitris.andreadis@gmail.com>

--- a/CONTACTS.yaml
+++ b/CONTACTS.yaml
@@ -119,7 +119,7 @@ egc-second:
   - project: jbang
     login: quintesse
   - project: quarkus
-    login: maxandersen
+    login: Sanne
   - project: hibernate
     login: yrodiere
   - project: kroxylicious
