Add jjpbolano as egc-second for debezium

--- a/CONTACTS.yaml
+++ b/CONTACTS.yaml
@@ -138,6 +138,8 @@ egc-second:
     login: bstansberry
   - project: wildfly
     login: tomjenkinson
+  - project: debezium
+    login: jjpbolano
 
 #--------------------------------------------------------------------------
 # Advisory Board members (sponsor-appointed)
