👷 Also manage officers

--- a/.github/cf-haus-organization.yml
+++ b/.github/cf-haus-organization.yml
@@ -22,6 +22,9 @@ teamMembership:
       egc:
         teams:
           - commonhaus/cf-egc
+      officers:
+        teams:
+          - commonhaus/cf-officers
       egc-second:
         teams:
           - commonhaus/cf-egc-second
