--- a/.github/workflows/pdf-build.yaml
+++ b/.github/workflows/pdf-build.yaml
@@ -58,7 +58,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v6
+        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
         with:
           fetch-depth: 0
 
@@ -70,12 +70,12 @@ jobs:
           PR_URL: ${{ github.event.pull_request.html_url }}
         run: ./.github/docker-build-pdf.sh
 
-      - uses: actions/upload-artifact@v5
+      - uses: actions/upload-artifact@330a01c490aca151604b8cf639adc76d48f6c5d4 # v5.0.0
         with:
           name: pdf-output
           path: output/public/*.pdf
 
-      - uses: actions/upload-artifact@v5
+      - uses: actions/upload-artifact@330a01c490aca151604b8cf639adc76d48f6c5d4 # v5.0.0
         with:
           name: docx-output
           path: output/public/*.docx
