🎉 Update SlateDB status from onboarding to active

--- a/PROJECTS.yaml
+++ b/PROJECTS.yaml
@@ -244,7 +244,7 @@ sdkman:
 slatedb:
   name: SlateDB
   repo: https://github.com/slatedb/slatedb
-  status: onboarding
+  status: active
   display:
     home: https://slatedb.io
     logo: https://github.com/slatedb/slatedb-website/blob/main/assets/svg/icon1.svg?raw=true
