clarify groups, add to end of lists

--- a/CONTACTS.yaml
+++ b/CONTACTS.yaml
@@ -84,6 +84,8 @@ egc:
     login: k-wall
   - project: pi4j
     login: FDelporte
+  - project: micronaut
+    login: sdelamo
 
   # Quarkus group
   - project: quarkus
@@ -110,8 +112,6 @@ egc:
     login: bstansberry
   - project: wildfly
     login: bstansberry
-  - project: micronaut
-    login: sdelamo
 
 #--------------------------------------------------------------------------
 # EGC Backup/Secondary representative (appointed by project governance process)
@@ -140,7 +140,12 @@ egc-second:
     login: quintesse
   - project: kroxylicious
     login: SamBarker
+  - project: pi4j
+    login: eitch
+  - project: micronaut
+    login: graemerocher
 
+  # Quarkus group
   - project: quarkus
     login: Sanne
   - project: smallrye
@@ -150,6 +155,7 @@ egc-second:
   - project: qbicc
     login: Sanne
 
+  # Wildfly group
   - project: ironjacamar
     login: tomjenkinson
   - project: jberet
@@ -164,11 +170,6 @@ egc-second:
     login: tomjenkinson
   - project: wildfly
     login: tomjenkinson
-  - project: micronaut
-    login: graemerocher
-
-  - project: pi4j
-    login: eitch
 
 #--------------------------------------------------------------------------
 # Advisory Board members (sponsor-appointed)
