micronaut joining request, 2026-02-25 (#300)
* micronaut joining request, 202026-02-25

Signed-off-by: Sergio del Amo <sergio.delamo@softamo.com>

* clarify groups, add to end of lists

* minor cleanup to trademarks

---------

Signed-off-by: Sergio del Amo <sergio.delamo@softamo.com>
Co-authored-by: Erin Schnabel <ebullientworks@gmail.com>

--- a/CONTACTS.yaml
+++ b/CONTACTS.yaml
@@ -84,6 +84,8 @@ egc:
     login: k-wall
   - project: pi4j
     login: FDelporte
+  - project: micronaut
+    login: sdelamo
 
   # Quarkus group
   - project: quarkus
@@ -138,7 +140,12 @@ egc-second:
     login: quintesse
   - project: kroxylicious
     login: SamBarker
+  - project: pi4j
+    login: eitch
+  - project: micronaut
+    login: graemerocher
 
+  # Quarkus group
   - project: quarkus
     login: Sanne
   - project: smallrye
@@ -148,6 +155,7 @@ egc-second:
   - project: qbicc
     login: Sanne
 
+  # Wildfly group
   - project: ironjacamar
     login: tomjenkinson
   - project: jberet
@@ -162,9 +170,6 @@ egc-second:
     login: tomjenkinson
   - project: wildfly
     login: tomjenkinson
-
-  - project: pi4j
-    login: eitch
 
 #--------------------------------------------------------------------------
 # Advisory Board members (sponsor-appointed)
